img component, button component, test pages & utils

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "outDir": "./dist/out-tsc",
         "strict": true,
         "noImplicitOverride": true,
+        "strictNullChecks":false,
         "noPropertyAccessFromIndexSignature": true,
         "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": true,
@@ -36,12 +37,13 @@
             "@shared/*": [
                 "app/shared/*"
             ]
-        }
+        },
+        "strictPropertyInitialization": false
     },
     "angularCompilerOptions": {
         "enableI18nLegacyMessageIdFormat": false,
         "strictInjectionParameters": true,
         "strictInputAccessModifiers": true,
-        "strictTemplates": true
+        "strictTemplates": true,
     }
 }
