--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
         "strict": true,
         "noImplicitOverride": true,
         "strictNullChecks":false,
-        "noPropertyAccessFromIndexSignature": true,
+        "noPropertyAccessFromIndexSignature": false,
         "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": true,
         "skipLibCheck": true,
